<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="dextaxonomia.com.triatodex.InicialActivity"
        android:label="@string/app_name"
        tools:layout="@layout/inicial_layout" />

    <fragment
        android:id="@+id/nav_pesquisar"
        android:name="dextaxonomia.com.triatodex.SearchActivity"
        android:label="@string/pesquisar"
        tools:layout="@layout/pesquisar_layout" />

    <fragment
        android:id="@+id/nav_possiveis_especies_layout"
        android:name="dextaxonomia.com.triatodex.ListaActivity"
        android:label="@string/possiveis_especies"
        tools:layout="@layout/possiveis_especies_layout" />

    <!-- fragment
        android:id="@+id/nav_resetar_busca"
        android:name="dextaxonomia.com.triatodex."
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" / -->

    <fragment
        android:id="@+id/nav_estruturas_morfologicas"
        android:name="dextaxonomia.com.triatodex.EstruturasActivity"
        android:label="@string/estruturas_morfologicas"
        tools:layout="@layout/estruturas_layout" />

    <fragment
        android:id="@+id/nav_respostas_layout"
        android:name="dextaxonomia.com.triatodex.AsksActivity"
        android:label="@string/respostas"
        tools:layout="@layout/respostas_layout" />

    <fragment
        android:id="@+id/nav_sobre_layout"
        android:name="dextaxonomia.com.triatodex.AboutActivity"
        android:label="@string/sobre"
        tools:layout="@layout/sobre_layout" />

    <fragment
        android:id="@+id/nav_referencia_layout"
        android:name="dextaxonomia.com.triatodex.ReferencesActivity"
        android:label="@string/referencias"
        tools:layout="@layout/referencias_layout" />

</navigation>